tests/tests/ui/omit_include.stderr
error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/ui/omit_include.rs:10:35
   |
10 |     let _ = User::filter_by_id(1).include();
   |                                   ^^^^^^^-- argument #1 is missing
   |
note: method defined here
  --> tests/ui/omit_include.rs:1:10
   |
 1 | #[derive(toasty::Model)]
   |          ^^^^^^^^^^^^^
   = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
10 |     let _ = User::filter_by_id(1).include(/* path */);
   |                                           ++++++++++
